updated for using JSDoc instead of decorators
